k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: variantec-route
  namespace: default
spec:
  hostnames:
  - variantec.zahnarzt.waldher.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: variantec-backend
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /api
  - backendRefs:
    - group: ""
      kind: Service
      name: variantec-frontend
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
